<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:padding="5.0dip" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/AIF_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5.0dip" >

        <ImageView
            android:id="@+id/Help_ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/title" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="24.0dip"
            android:text="@string/help1"
            android:textColor="#ffffffff"
            android:textSize="24.0dip" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help2"
            android:textColor="#ffffffff"
            android:textSize="16.0dip" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.0dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/wp" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help3"
            android:textColor="#ffffffff"
            android:textSize="16.0dip" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.0dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/enpassant_rule_01" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.0dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/wn" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help4"
            android:textColor="#ffffffff"
            android:textSize="16.0dip" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.0dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/wb" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help5"
            android:textColor="#ffffffff"
            android:textSize="16.0dip" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.0dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/wr" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help6"
            android:textColor="#ffffffff"
            android:textSize="16.0dip" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.0dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/wq" />

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help7"
            android:textColor="#ffffffff"
            android:textSize="16.0dip" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.0dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/wk" />

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help8"
            android:textColor="#ffffffff"
            android:textSize="16.0dip" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.0dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/castling_rule_01" />

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help9"
            android:textColor="#ffffffff"
            android:textSize="16.0dip" />

        <Button
            android:id="@+id/Help_ExitButton"
            android:layout_width="100.0dip"
            android:layout_height="60.0dip"
            android:layout_gravity="center"
            android:text="@string/back"
            android:background="@drawable/button_custom" />
    </LinearLayout>

</ScrollView>